fix the bug of follow and unfollow
